# ktv_music_system_vue_rustyew

./: .gitignore  README.md
ktv_admin/: .gitignore  README.md  package.json  pnpm-lock.yaml
ktv_admin/src/: App.vue  main.js
ktv_admin/src/components/: Nav.vue
ktv_admin/src/network/: adminLike.js  login.js  manage_music.js  order.js  request.js  userService.js
ktv_admin/src/router/: index.js
ktv_admin/src/store/: adminStore.js  index.js
ktv_admin/src/utils/: wsmLoading.js
ktv_admin/src/views/: AdminLike.vue  Home.vue  Index.vue  Login.vue  ManageMusic.vue  Order.vue  UserService.vue
ktv_client/: Cargo.toml  README.md  index.html  index.scss
ktv_client/src/: app.rs  main.rs
ktv_client/src/components/: bottom_nav.rs  f404.rs  mod.rs  top_nav.rs
ktv_client/src/style/: base.scss  bottomnav.scss  topnav.scss  viriables.scss
ktv_serve/: index.js  package.json  pnpm-lock.yaml
ktv_serve/config/: isBadAccount.js  newaccount.js  passportVlidate.js  uploadImg.js  uploadMusic.js
ktv_serve/dbModel/: admin.js  adminLike.js  music.js  user.js
ktv_serve/mongodb/: db.js
ktv_serve/secret/: jwtkey.js  mongodbURL.js
ktv_serve/service/: admin.js  music.js  safecode.js  user.js
